[project]
name = "project-name"
version = "0.1.0"
description = "Project description"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Sadamori Kojaku"},
]
license = {file = "LICENSE"}

dependencies = [
    "numpy>=1.20.0",
    "numba>=0.56.0",
    "pandas>=1.3.0",
    "snakemake",
    "pulp>=2.6.0,<2.7.0",
    "scipy",
    "matplotlib",
    "seaborn",
    "tqdm",
    "rich",
    "marimo>=0.16.1",
    "google-genai>=1.38.0",
    "scikit-learn>=1.0.0",
    "nvitop>=1.5.3",
    "ipywidgets>=8.1.7",
    "python-igraph>=0.11.9",
    "torch-geometric>=2.6.1",
    "torch>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "ipykernel",
    "isort",
    "mypy",
    "docformatter",
    "snakefmt",
]

# pyproject.toml
[tool.isort]
profile = "black"
